feat: adds Friendship Entity
