# src/modules/friendships/entities/friendship.entity.ts
@@ -1,0 +1,39 @@
+import {
+  Entity,
+  PrimaryGeneratedColumn,
+  Column,
+  ManyToOne,
+  CreateDateColumn,
+  Unique,
+} from 'typeorm';
+import { User } from 'src/modules/users/entities/user.entity';
+
+export enum FriendshipStatus {
+  PENDING = 'pending',
+  ACCEPTED = 'accepted',
+  REJECTED = 'rejected',
+  BLOCKED = 'blocked',
+}
+
+@Entity('friendships')
+@Unique(['requester', 'receiver'])
+export class Friendship {
+  @PrimaryGeneratedColumn('uuid')
+  id: string;
+
+  @ManyToOne(() => User, { onDelete: 'CASCADE' })
+  requester: User;
+
+  @ManyToOne(() => User, { onDelete: 'CASCADE' })
+  receiver: User;
+
+  @Column({
+    type: 'enum',
+    enum: FriendshipStatus,
+    default: FriendshipStatus.PENDING,
+  })
+  status: FriendshipStatus;
+
+  @CreateDateColumn()
+  createdAt: Date;
+}
